SERVER-31930: Have ephemeralForTest capped collections unindex deleted documents in rollback.